# server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: fly-deploy.yml
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
